# bams3

./: .gitignore  BAMS3_BINARY_FORMAT_v0.2.md  BAMS3_SPECIFICATION.md  BAMS3_SPECIFICATION_v0.1.md  BAMS3_v0.3.0_PLAN.md  BAM_EXPORT.md  BWA_TESTING.md  CHANGELOG.md  CLAUDE.md  COMPARISON.md  GITHUB_ISSUES.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PARALLEL_OPERATIONS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  S3_INTEGRATION.md  pyproject.toml  test-bwa-clean.sh  test-bwa-pipeline.sh  test-bwa-simple.sh  test-gatk-integration.sh  test-s3-local.sh  test-spill-hard.sh  test-spill-ultra.sh  test-spill.sh
bams3-go/: BINARY_FORMAT_VALIDATION.md  COMPRESSION_RESULTS.md  README.md  REAL_DATA_TESTING.md  go.mod  go.sum
benchmarks/: README.md  compare-workflows.sh
blog/: introducing-bams3.md  parallel-performance.md
demos/: README.md  run-all-demos.sh
docs/: CORE_LIBRARY_DESIGN.md  COST_OPTIMIZATION.md  RESEARCH_VIDEO_DESIGN.md  VCFS3_DESIGN.md  WGS_TESTING_PROTOCOL.md  format-design-for-s3.md  format-optimization.md  htslib-s3-status.md  tool-modification-guide.md
examples/: README.md  parallel_workflows.md  s3_workflows.md
format-tools/: bams3-spec.md
nextflow/: Dockerfile  QUICKSTART.md  README.md  main.nf  nextflow.config  params.yaml  samples.csv
scripts/: README.md  WGS_TESTING_README.md  aws-setup.sh  benchmark.py  ec2-setup-userdata.sh  example-results.md  generate-test-report.sh  quick-benchmark.sh  quick-test.sh  run-chr22-test.sh  run-full-wgs-test.sh  run-gatk-integration-test.sh  setup-wgs-testing.sh
test-data/: BIDIRECTIONAL_CONVERSION.md  (+8 more)
(+47 files in other folders)
