[project]
name = "aws-direct-s3"
version = "0.1.0"
description = "Tools and examples for S3-native genomics workflows"
requires-python = ">=3.9"
dependencies = [
    "pysam>=0.22.0",
    "boto3>=1.34.0",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
]
